--- a/app/src/main/res/layout/activity_view_uploaded_data.xml
+++ b/app/src/main/res/layout/activity_view_uploaded_data.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".ViewUploadedData">
 
+    <TextView
+        android:id="@+id/textView_uploaded_data_heading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/uploaded_patient_data"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recylerView_uploaded_patient_data"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_uploaded_data_heading" />
 </androidx.constraintlayout.widget.ConstraintLayout>
