Redundancy Bug Squashed. Skeleton code for item click display added.

--- a/app/src/main/res/layout/activity_new_patient.xml
+++ b/app/src/main/res/layout/activity_new_patient.xml
@@ -249,7 +249,8 @@
                 android:autofillHints="Heart Disease"
                 android:ems="10"
                 android:hint="@string/comorbidity_description"
-                android:inputType="textShortMessage" />
+                android:inputType="textShortMessage"
+                android:enabled="false"/>
         </LinearLayout>
 
         <TextView
