--- a/app/src/main/res/layout/activity_display_patient_data.xml
+++ b/app/src/main/res/layout/activity_display_patient_data.xml
@@ -48,7 +48,8 @@
 
         <com.google.android.material.chip.ChipGroup
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="8dp">
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_fever"
