Improved Patient Display UI and symptom list generation.

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,52 +8,80 @@
     app:cardCornerRadius="1dp"
     app:cardElevation="8dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="2dp">
+        android:padding="8dp">
 
         <TextView
             android:id="@+id/textView_patient_name_display"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:text="@string/patient_s_name"
+            app:layout_constraintBottom_toTopOf="@+id/textView_patient_age_display"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
             android:id="@+id/textView_patient_age_display"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:text="@string/patient_s_age"
+            app:layout_constraintBottom_toTopOf="@+id/textView_patient_sex_display"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_patient_name_display" />
 
         <TextView
             android:id="@+id/textView_patient_sex_display"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:text="@string/patient_s_sex"
+            app:layout_constraintBottom_toTopOf="@+id/textView_patient_symptoms_display"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_patient_age_display" />
 
         <TextView
             android:id="@+id/textView_patient_symptoms_display"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:text="@string/symptoms_shown"
+            app:layout_constraintBottom_toTopOf="@+id/textView_comorbidities_display"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_patient_sex_display" />
 
         <TextView
             android:id="@+id/textView_comorbidities_display"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:text="@string/comorbidties"
+            app:layout_constraintBottom_toTopOf="@+id/textView_symptom_severity_display"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_patient_symptoms_display" />
 
         <TextView
             android:id="@+id/textView_symptom_severity_display"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:text="@string/severity_of_symptoms"
+            app:layout_constraintBottom_toTopOf="@+id/textView_patient_condition_display"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_comorbidities_display" />
 
         <TextView
             android:id="@+id/textView_patient_condition_display"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="" />
-    </LinearLayout>
+            android:text="@string/condition_of_the_patient"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_symptom_severity_display" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
